--- a/DL_Assignment1_R26121073_陳沛群.ipynb
+++ b/DL_Assignment1_R26121073_陳沛群.ipynb
@@ -165,8 +165,8 @@
     "for name, clf in classifiers.items():\n",
     "    # Load training and testing data\n",
     "    for extract_func in ['brisk','orb','sift','hog']:\n",
-    "        x, y = load_img('/Users/chenmaige/Downloads/TinyImageNet/train.txt',func=extract_func)\n",
-    "        tx, ty = load_img('/Users/chenmaige/Downloads/TinyImageNet/test.txt',func=extract_func)\n",
+    "        x, y = load_img('/Users/chenmaige/Downloads/TinyImageNet/train.txt',func=extract_func) #更改為檔案路徑\n",
+    "        tx, ty = load_img('/Users/chenmaige/Downloads/TinyImageNet/test.txt',func=extract_func) #更改為檔案路徑\n",
     "        clf.fit(x, y)\n",
     "        pred = clf.predict(tx)\n",
     "        acc = accuracy_score(ty, pred)\n",
